Bug 1599922 clear PRThread references before the PRThread is deleted r=froydnj

Virtual thread references are used for IsOnCurrentThread(), which would
spuriously return true when the dangling pointer happened to match that of a
new PRThread.

Differential Revision: https://phabricator.services.mozilla.com/D55765